--- a/main.html
+++ b/main.html
@@ -10,7 +10,34 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	
+	<!--Using Table keyword. Border and bgcolor for design attributes-->
+	<table border="1" 
+		bgcolor="yellow">
+		
+		<!--Caption must always come next to table-->
+		<caption>Student Details</caption>
 
+		<!--Table row and Table header-->
+		<tr>
+			<th>NAME</th>
+			<th>AGE</th>
+			<th>BRANCH</th>
+		</tr>
+
+		<!--Table row and Table data-->
+		<tr>
+			<td>Shaw</td>
+			<td>20</td>
+			<td>CSE</td>
+		</tr>
+		
+		<tr>
+			<td>Shaw</td>
+			<td>20</td>
+			<td>CSE</td>
+		</tr>
+	</table>
 </body>
 
 </html>
