--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 	
 	<!--Using Table keyword. Border and bgcolor for design attributes-->
-	<table border="1" 
+	<table border 
 		bgcolor="yellow">
 		
 		<!--Caption must always come next to table-->
