--- a/main.html
+++ b/main.html
@@ -10,9 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	
-	<!--Using Table keyword. Border and bgcolor for design attributes-->
-	<table border 
+	<table border="1px solid black"
 		bgcolor="yellow">
 		
 		<!--Caption must always come next to table-->
