--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<table border="1px rgb(0,0,0)"
+	<table border='1px rgb(0,0,0)'
 		bgcolor="yellow">
 		
 		<!--Caption must always come next to table-->
