--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 	table{
 	border: 1px solid black
 	}
-	<table border='1px rgb(0,0,0)'
+	<table border='1px solid rgb(0,0,0)'
 		bgcolor="yellow">
 		
 		<!--Caption must always come next to table-->
