--- a/main.html
+++ b/main.html
@@ -10,15 +10,13 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	table{
-	border: 1px solid black
-	}
-	<table border='1px solid rgb(0,0,0)'
+
+	<table border="1px solid rgb(128,128,128)"
 		bgcolor="yellow">
 		
 		<!--Caption must always come next to table-->
 		<caption>Student Details</caption>
-
+		
 		<!--Table row and Table header-->
 		<tr>
 			<th>NAME</th>
