--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 		<caption>Student Details</caption>
 		
 		<!--Table row and Table header-->
-		<tr>
+		<tr border="1">
 			<th>NAME</th>
 			<th>AGE</th>
 			<th>BRANCH</th>
@@ -32,9 +32,9 @@
 		</tr>
 		
 		<tr>
-			<td>Shaw</td>
-			<td>20</td>
-			<td>CSE</td>
+			<td>Datta</td>
+			<td>21</td>
+			<td>ECE</td>
 		</tr>
 	</table>
 </body>
