--- a/main.html
+++ b/main.html
@@ -10,8 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	
 	<table border="1"
+		bordercolor=black
 		bgcolor="yellow">
 		
 		<!--Caption must always come next to table-->
